# local-llm-chat

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  renderer.js  styles.css  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
